--- a/www/css/styleCadastro.css
+++ b/www/css/styleCadastro.css
@@ -1,68 +1,12 @@
-nav {
-	position: relative;
-	height: 50px;
-	background-color: #34495e;
-	border-radius: 8px;
-	font-size: 0;
-  list-style-type: none;
-  text-align: center;
-}
 
 *:focus{
   outline: 0;
 }
 
-nav a {
-	line-height: 50px;
-
-	font-size: 13px;
-	display: inline-block;
-	position: relative;
-	z-index: 1;
-	text-decoration: none;
-	text-transform: uppercase;
-	color: white;
-	cursor: pointer;
-  text-align: center;
-}
-nav .animation {
-	position: absolute;
-	height: 100%;
-	top: 0;
-	z-index: 0;
-	transition: all .10s ease 0s;
-	border-radius: 8px;
-}
-
-a:nth-child(1) {
-	width: 120px;
-}
-a:nth-child(2) {
-	width: 110px;
-}
-a:nth-child(3) {
-	width: 100px;
-}
-nav .start-home, a:nth-child(1):hover~.animation {
-	width: 150px;
-	left: 0;
-	background-color: #1abc9c;
-}
-nav .start-about, a:nth-child(2):hover~.animation{
-	width: 110px;
-	left: 155px;
-	background-color: hotpink;
-}
-nav .start-blog, a:nth-child(3):hover~.animation{
-	width: 127px;
-	left: 270px;
-	background-color: #3498db;
-}
-
 body {
 	font-size: 12px;
 	font-family: sans-serif;
-	background: aliceblue;
+	background: white;
 }
 h1 {
   text-decoration: none;
@@ -98,55 +42,37 @@ p {
 .nomeProp {
     display: flex;
     margin: 0 auto;
-    font: 15px/24px "Lato", Arial, sans-serif;
     color: #333; 
     width: 100%; 
     box-sizing: border-box; 
-    letter-spacing: 1px;
-    font-size: 1.7vh;
-    border-radius: 5px;
+    border-radius: 1.5px;
+    padding: 10px;
+    font-size: 15px;
+    background: white;
 }
 
-.hora{
-  text-align: left;
-  margin-top: 1vh;
-}
-
-#horario{
-  display: flex;
-  margin: 0 auto;
-  font: 15px/24px "Lato", Arial, sans-serif;
-  color: #333; 
-  width: 100%; 
-  height: 4.2vh;
-  box-sizing: border-box; 
-  font-size: 1.7vh;
-  border-radius: 5px;
-  background-color: white;
-  margin-top: 1vh; 
+.nome{
+  margin-top: 3vh;
 }
 
 label{
   text-align: left;
   font-weight: bold;
-}
-
-.marca{
-  text-align: left;
-  margin-top: 1vh;
-}
-
-.modelo{
-  text-align: left;
-  margin-top: 1vh;
-}
-
-.tipo{
-  text-align: left;
-  margin-top: 1vh;
+  margin-top: 1.5vh;
+  font-size: 15px;
 }
 
 .placa{
-  text-align: left;
-  margin-top: 1vh;
+  margin-top: 2vh;
+}
+
+.inputs{
+    display: flex;
+    margin: 0 auto;
+    color: #333; 
+    width: 100%; 
+    border-radius: 2px;
+    font-size: 15px;
+    background: white;
+    padding: 8px;
 }
