--- a/www/css/stylee.css
+++ b/www/css/stylee.css
@@ -1,55 +1,14 @@
-nav {
-	position: relative;
-	height: 50px;
-	background-color: #34495e;
-	border-radius: 8px;
-	font-size: 0;
-  list-style-type: none;
-  text-align: center;
+
+body {
+	font-size: 12px;
+	font-family: sans-serif;
+	background: white;
 }
 
 *:focus{
   outline: 0;
 }
 
-nav a {
-	line-height: 50px;
-
-	font-size: 13px;
-	display: inline-block;
-	position: relative;
-	z-index: 1;
-	text-decoration: none;
-	text-transform: uppercase;
-	color: white;
-	cursor: pointer;
-  text-align: center;
-}
-nav .animation {
-	position: absolute;
-	height: 100%;
-	top: 0;
-	z-index: 0;
-	transition: all .10s ease 0s;
-	border-radius: 8px;
-}
-
-a:nth-child(1) {
-	width: 120px;
-}
-a:nth-child(2) {
-	width: 110px;
-}
-a:nth-child(3) {
-	width: 100px;
-}
-
-
-body {
-	font-size: 12px;
-	font-family: sans-serif;
-	background: aliceblue;
-}
 h1 {
   text-decoration: none;
 	text-align: center;
@@ -77,3 +36,17 @@ p {
     font-size: 16px;
 }
 
+.navbar{
+  background: aquamarine;
+  color: #34495e;
+  border-radius: 5px;
+}
+
+.dropdown-menu{
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.dropdown-toggle{
+  border-radius: 8px;
+}
